test/error/iocheck/err3.rzy
// Error: query is not allowed to write state


interface
  IfaceEvent
    function event();
  end
  
  IfaceQuerry
    function query():R{0,100};
  end
  
component
  Err3
    input
      in  : IfaceQuerry;
    
    output
      out : IfaceEvent;
    
    implementation hfsm(A)
    
    state A
      function in.query():R{0,100}
        out.event();
        return 0;
      end
    end
    
  end

